# serializer version: 1
# name: TestRIS001.test_class_docstring_style_guard
  '''
  ━━━ Diagnostics ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  
  ris001_class_style.py:8:8: RIS001 [unsafe] Missing Raises section in docstring.
     |
   7 | def regular_function_missing_raises() -> None:
   8 |     """Do something."""
     |        ^^^^^^^^^^^^^
   9 |     raise ValueError("error")
     |
  
  ━━━ Diff ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  
  --- ris001_class_style.py
  +++ ris001_class_style.py (fixed)
  @@ -5,7 +5,11 @@
   
   # violation: regular function raises but has no Raises section
   def regular_function_missing_raises() -> None:
  -    """Do something."""
  +    """Do something.
  +
  +    Raises:
  +        ValueError:
  +    """
       raise ValueError("error")
  '''
# ---
# name: TestRIS001.test_class_docstring_style_guard_init
  '''
  ━━━ Diagnostics ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  
  ris001_init_style.py:8:8: RIS001 [unsafe] Missing Raises section in docstring.
     |
   7 | def regular_function_missing_raises() -> None:
   8 |     """Do something."""
     |        ^^^^^^^^^^^^^
   9 |     raise ValueError("error")
     |
  
  ━━━ Diff ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  
  --- ris001_init_style.py
  +++ ris001_init_style.py (fixed)
  @@ -5,7 +5,11 @@
   
   # violation: regular function raises but has no Raises section
   def regular_function_missing_raises() -> None:
  -    """Do something."""
  +    """Do something.
  +
  +    Raises:
  +        ValueError:
  +    """
       raise ValueError("error")
  '''
# ---
# name: TestRIS001.test_rule
  '''
  ━━━ Diagnostics ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  
  ris001.py:7:8: RIS001 [unsafe] Missing Raises section in docstring.
     |
   6 | def missing_raises_section():
   7 |     """Do something."""
     |        ^^^^^^^^^^^^^
   8 |     raise ValueError("something went wrong")
     |
  
  ━━━ Diff ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
  
  --- ris001.py
  +++ ris001.py (fixed)
  @@ -4,7 +4,11 @@
   
   # violation
   def missing_raises_section():
  -    """Do something."""
  +    """Do something.
  +
  +    Raises:
  +        ValueError:
  +    """
       raise ValueError("something went wrong")
  '''
# ---
